Exui 673 expand all folders (#1853)
* exui-673 - extend ccd toolkit to support toggling case file folders

* exui-673 - patch expandAll logic for toggling case file folders

* exui-673 - update pkg version

* exui-673 - undo prettier code formatting

* exui-673 - remove redundant ngOnInit for this component

* exui-673 - update pkg versions

* exui-673 - Add unit tests and update pkg versions

* exui-673 - adding WindowService to TestBed providers for unit tests

* exui-673 - additional TestBed providers required by Jenkins

* exui-673 - fix and refactor tests

* Update case-file-view-field.component.html

* Update index.ts

* Update case-file-view-field.component.html

* Update case-file-view-field.component.html

* Update case-file-view-folder-toggle.component.ts

* Update case-file-view-folder.component.html

* Update case-file-view-field.component.html

* Update case-file-view-field.component.html

* Update case-file-view-field.component.html

* Update case-file-view-folder.component.html

* Update case-file-view-folder-toggle.component.spec.ts

* Update case-file-view-folder.component.scss

* Update case-file-view-folder.component.scss

* Update case-file-view-folder.component.html

* Update case-file-view-folder.component.html

* Update case-file-view-folder.component.html

* Update case-file-view-folder.component.html

* Update palette.module.ts

* exui-673 - fix expandAll and update TK version

* exui-673 - update TK version

* release note updated

---------

Co-authored-by: japickering <jpuidev@outlook.com>
Co-authored-by: jphcdcgi <james.pickering@cgi.com>
Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>
Co-authored-by: RiteshHMCTS <ritesh.dsouza@hmcts.net>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.scss
@@ -39,6 +39,11 @@
   &__title {
     font-weight: 700;
   }
+
+  &__flex {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .document-tree-container {
@@ -113,7 +118,7 @@
   white-space: nowrap;
 
   &--selected {
-    background: #fff2cc;
+    background: #FFF2CC;
   }
 
   &__icon {
@@ -122,7 +127,7 @@
   }
 
   &__count {
-    color: #fff;
+    color: #FFF;
     position: absolute;
     top: 50%;
     left: 50%;
