--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -1,22 +1,27 @@
 <div class="document-filter-container">
   <div class="form-group document-filter" [formGroup]="documentFilterFormGroup">
-    <input class="form-control document-search"
-      type="search"
-      id="document-search"
+    <input 
+      class="form-control document-search" 
+      type="search" 
+      id="document-search" 
       name="documentSearchFormControl"
       formControlName="documentSearchFormControl"
       placeholder="Search by document name"
-      aria-label="Search by document name">
+      aria-label="Search by document name" />
   </div>
 </div>
 
 <div class="document-folders-header">
-  <span class="document-folders-header__title">Documents ({{ documentCount }})</span>
-  <div>
-    <ccd-case-file-view-folder-sort
+  <div class="document-folders-header__title">Documents ({{ documentCount }})</div>
+  <div class="document-folders-header__flex">
+    <ccd-case-file-view-folder-toggle 
+      (expandAll)="expandAll($event)"
+      (collapseAll)="collapseAll($event)">
+    </ccd-case-file-view-folder-toggle>
+    <ccd-case-file-view-folder-sort 
       (sortAscending)="sortDataSourceAscending($event)"
-      (sortDescending)="sortDataSourceDescending($event)"
-    ></ccd-case-file-view-folder-sort>
+      (sortDescending)="sortDataSourceDescending($event)">
+    </ccd-case-file-view-folder-sort>
   </div>
 </div>
 
@@ -31,12 +36,17 @@
         <button class="node case-file__node" (click)="selectedNodeItem = node; clickedDocument.emit(node)"
                 [class.node--selected]="selectedNodeItem?.name === node.name">
           <div class="node__icon" disabled>
-            <img src="/assets/img/case-file-view/case-file-view-document.svg" class="node__iconImg" alt="Document icon">
+            <img src="/assets/img/case-file-view/case-file-view-document.svg" 
+              class="node__iconImg"
+              alt="Document icon" 
+            />
           </div>
           <span class="node__name node-name-document">
-            {{node.name}}
-            <br>
-            <span class="node__document-upload-timestamp">{{node.upload_timestamp | ccdDate : 'local' :'dd MMM YYYY HH:mm'}}</span>
+            {{ node.name }}
+            <br />
+            <span class="node__document-upload-timestamp">{{
+              node.upload_timestamp | ccdDate: "local":"dd MMM YYYY HH:mm"
+              }}</span>
           </span>
         </button>
         <div class="node__document-options case-file__action">
@@ -53,14 +63,16 @@
       <!-- folder-->
       <cdk-nested-tree-node class="document-tree-container__node document-tree-container__folder" *cdkTreeNodeDef="let node; when: nestedChildren">
         <button class="node" cdkTreeNodeToggle>
-          <div class="node__icon" [attr.aria-label]="'toggle ' + node.name" >
-            <img class="node__iconImg"
-                 [src]="nestedTreeControl.isExpanded(node) ? '/assets/images/folder-open.png' : '/assets/images/folder.png'" alt="Folder icon">
-            <span class="node__count">{{node.childDocumentCount}}</span>
+          <div class="node__icon" [attr.aria-label]="'toggle ' + node.name">
+            <img class="node__iconImg" 
+                [src]="nestedTreeControl.isExpanded(node)
+                  ? '/assets/images/folder-open.png'
+                  : '/assets/images/folder.png'
+              " alt="Folder icon" />
+            <span class="node__count">{{ node.childDocumentCount }}</span>
           </div>
-          <span class="node__name node__name--folder">{{node.name}}</span>
+          <span class="node__name node__name--folder">{{ node.name }}</span>
         </button>
-
         <div [class.document-tree-invisible]="!nestedTreeControl.isExpanded(node)">
           <ng-container cdkTreeNodeOutlet></ng-container>
         </div>
