--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
@@ -16,12 +16,40 @@
     <ccd-read-document-field *ngIf="caseField" [caseField]="caseField"></ccd-read-document-field>
   </div>
 
-  <div style='position:relative'>
-    <div [id]="createElementId('fileInputWrapper')" (click)="fileSelectEvent()" (keyup)="fileSelectEvent()"></div>
-    <input class="form-control bottom-30" [id]="id()" type="file" (keydown.Tab)="fileValidationsOnTab()" (change)="fileChangeEvent($event, caseField.field_type.regular_expression)"
-           accept="{{caseField.field_type.regular_expression}}" #fileInput/>
+  <div style="position:relative">
+    <div
+      [id]="createElementId('fileInputWrapper')"
+      (click)="fileSelectEvent()"
+      (keyup)="fileSelectEvent()"
+    ></div>
+    <div class="upload-file-container">
+      <label
+        [for]="id()"
+        class="button button-secondary input-label"
+        aria-label="Choose file">
+        {{'Choose file' | rpxTranslate}}
+      </label>
+      <span class="form-control bottom-30">
+        <span>{{fileName}}</span>
+      </span>
+    </div>
+    <input
+      [id]="id()"
+      type="file"
+      class="input-upload-file"
+      (keydown.Tab)="fileValidationsOnTab()"
+      (change)="fileChangeEvent($event, caseField.field_type.regular_expression)"
+      accept="{{caseField.field_type.regular_expression}}"
+      #fileInput/>
   </div>
 </div>
 <div class="form-group bottom-30">
-  <button class="button button-secondary" type="button" aria-label="Cancel upload" (click)="cancelUpload()" [disabled]="!isUploadInProgress()">{{'Cancel upload' | rpxTranslate}}</button>
+  <button
+    class="button button-secondary"
+    type="button"
+    aria-label="Cancel upload"
+    (click)="cancelUpload()"
+    [disabled]="!isUploadInProgress()">
+    {{'Cancel upload' | rpxTranslate}}
+  </button>
 </div>
