--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div>
-    <ccd-query-details [query]="queryItem"
+    <ccd-query-details [query]="queryListData"
       [queryResponseStatus]="queryResponseStatus"
       (hasResponded)="hasResponded($event)"></ccd-query-details>
   </div>
