EXUI-2703 - Move apply and cancel buttons to the top of the case filters menu (#1898)
* EXUI-2703 - patch TK moving apply and cancel buttons to the top of the case filters. Add back to top nav.

* EXUI-2703 - add new test for code coverage

* exui-2703 - update TK version

* version updated

---------

Co-authored-by: jphcdcgi <james.pickering@cgi.com>
Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>
Co-authored-by: RiteshHMCTS <ritesh.dsouza@hmcts.net>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/workbasket-filters/workbasket-filters.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/workbasket-filters/workbasket-filters.component.html
@@ -1,6 +1,16 @@
-<h2 class="heading-h2" aria-label="Filters">{{'Filters' | rpxTranslate }}</h2>
+<form id="filters" class="global-display">
+  <div class="form-group flex">
+    <fieldset class="heading-h2" aria-label="Filters">{{'Filters' | rpxTranslate }}</fieldset>
+    <button type="button" class="button workbasket-filters-apply" (click)="apply(true)" [disabled]="isApplyButtonDisabled()"
+        [title]="'Apply filter' | rpxTranslate" [attr.aria-label]="'Apply filter' | rpxTranslate">
+      {{'Apply' | rpxTranslate}}
+    </button>&nbsp;&nbsp;&nbsp;
+    <button type="button" (click)="reset()" class="button button-secondary"
+        [title]="'Reset filter' | rpxTranslate" [attr.aria-label]="'Reset filter' | rpxTranslate">
+      {{'Reset' | rpxTranslate}}
+    </button>
+  </div>
 
-<form class="global-display">
   <div class="form-group">
     <label class="form-label" for="wb-jurisdiction">{{'Jurisdiction' | rpxTranslate}}</label>
     <select class="form-control form-control-3-4 ccd-dropdown" id="wb-jurisdiction"
@@ -40,12 +50,7 @@
     </div>
   </ng-container>
 
-  <button type="button" class="button workbasket-filters-apply" (click)="apply(true)" [disabled]="isApplyButtonDisabled()"
-          [title]="'Apply filter' | rpxTranslate" [attr.aria-label]="'Apply filter' | rpxTranslate">
-    {{'Apply' | rpxTranslate}}
-  </button> &nbsp;&nbsp;&nbsp;
-  <button type="button" (click)="reset()" class="button button-secondary"
-          [title]="'Reset filter' | rpxTranslate" [attr.aria-label]="'Reset filter' | rpxTranslate">
-    {{'Reset' | rpxTranslate}}
-  </button>
+    <button type="button" class="button" (click)="scrollToTop()"
+          [title]="'Back to top' | rpxTranslate" [attr.aria-label]="'Back to top' | rpxTranslate">{{'Back to top' | rpxTranslate}}
+    </button>
 </form>
