--- a/projects/ccd-case-ui-toolkit/src/lib/components/form/date-input/date-input.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/components/form/date-input/date-input.html
@@ -56,7 +56,9 @@
            class="form-control"
            [id]="hourId()"
            [name]="hourId()"
-           type="number"
+           type="text"
+           pattern="[0-9]*"
+           inputmode="numeric"
            [attr.aria-labelledby]="'hour-label-'+ hourId()"
            [value]="displayHour"
            (input)="hourChange(hourInput.value)"
@@ -71,7 +73,9 @@
            class="form-control"
            [id]="minuteId()"
            [name]="minuteId()"
-           type="number"
+           type="text"
+           pattern="[0-9]*"
+           inputmode="numeric"
            [attr.aria-labelledby]="'minute-label-'+ minuteId()"
            [value]="displayMinute"
            (input)="minuteChange(minuteInput.value)"
@@ -86,7 +90,9 @@
            class="form-control"
            [id]="secondId()"
            [name]="secondId()"
-           type="number"
+           type="text"
+           pattern="[0-9]*"
+           inputmode="numeric"
            [attr.aria-labelledby]="'second-label-'+ secondId()"
            [value]="displaySecond"
            (input)="secondChange(secondInput.value)"
