update isClosed to string

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-respond-to-query/query-write-respond-to-query.component.html
@@ -40,3 +40,9 @@
     </div>
   </div>
 </div>
+
+<ng-container *ngIf="queryCreateContext === queryCreateContextEnum.RESPOND">
+  <ccd-close-query *ngIf="!hasRespondedToQuery"
+    [formGroup]="formGroup">
+  </ccd-close-query>
+</ng-container>
