update test case

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/close-query/close-query.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/close-query/close-query.component.html
@@ -2,7 +2,7 @@
     <h2 class="govuk-heading-m">{{ 'Closing the query' | rpxTranslate }}</h2>
     <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input"
-            formControlName="closeQuery" id="closeQuery" name="closeQuery" type="checkbox" (change)="closeQuery()" />
+            formControlName="closeQuery" id="closeQuery" name="closeQuery" type="checkbox" />
         <label class="govuk-label govuk-checkboxes__label" for="closeQuery" [attr.aria-labelledby]="'closeQuery'">
         {{ 'I want to close this query' | rpxTranslate }}
         </label>
