--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/read-collection-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/read-collection-field.html
@@ -15,6 +15,7 @@
             parent: caseField
           }"
           [context]="context"
+          [caseFields]="caseFields"
           [topLevelFormGroup]="topLevelFormGroup">
         </ccd-field-read>
       </td>
@@ -33,6 +34,7 @@
             parent: caseField
           }"
           [context]="context"
+          [caseFields]="caseFields"
           [topLevelFormGroup]="topLevelFormGroup"
           [idPrefix]="buildIdPrefix(i)">
         </ccd-field-read>
