--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/organisation/read-organisation-field-table.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/organisation/read-organisation-field-table.component.html
@@ -9,15 +9,15 @@
         </th>
         <td>
           <table class="complex-field-table" *ngIf="(selectedOrg$ | async) as selectedOrg"
-                 [attr.aria-describedby]="'complex selected organisation field table' | rpxTranslate">
+                 [attr.aria-describedby]="'selected organisation field table'">
             <tr class="complex-panel-compound-field">
               <th style="display: none;"></th>
-              <td class="label-width-medium"><span class="text-16">{{'Name:' | rpxTranslate}}</span></td>
+              <td class="label-width-medium"><span class="text-16">{{'Name:'}}</span></td>
               <td><span class="text-16">{{selectedOrg.name}}</span></td>
             </tr>
             <tr class="complex-panel-compound-field">
               <th style="display: none;"></th>
-              <td class="label-width-medium"><span class="text-16">{{'Address:' | rpxTranslate}}</span></td>
+              <td class="label-width-medium"><span class="text-16">{{'Address:'}}</span></td>
               <td>
                 <ccd-markdown [content]="selectedOrg.address"></ccd-markdown>
               </td>
