Refactor approach to translations for qualifying questions

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-detail/qualifying-question-detail.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-detail/qualifying-question-detail.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="qualifyingQuestion?.markdown">
+<!-- <ng-container *ngIf="qualifyingQuestion?.markdown">
   <h1 class="govuk-heading-l">
     {{ qualifyingQuestion.name | rpxTranslate }}
   </h1>
@@ -7,4 +7,25 @@
     [content]="qualifyingQuestion.markdown | rpxTranslate">
   </ccd-markdown>
   </div>
-</ng-container>
+</ng-container> -->
+
+<ng-container *ngIf="qualifyingQuestion?.markdown">
+  <h1 class="govuk-heading-l">
+    {{ qualifyingQuestion.name | rpxTranslate }} -
+  </h1>
+   <!-- <ng-container *translatedMarkdown="qq; let content">
+    {{ qq.markdown }}
+    <div class="qm-qualifying-question">
+      <ccd-markdown
+        [content]="qq ? content : (qq.markdown | rpxTranslate)">
+      </ccd-markdown>
+    </div>
+   </ng-container> -->
+
+    <ng-container *translatedMarkdown="qualifyingQuestion; let content;">
+    <div class="qm-qualifying-question">
+       {{ qualifyingQuestion.markdown }}
+      <ccd-markdown [content]="qualifyingQuestion ? content : (qualifyingQuestion.markdown | rpxTranslate)"></ccd-markdown>
+    </div>
+  </ng-container>
+ </ng-container>
