--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/history/event-log/event-log-table.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/history/event-log/event-log-table.component.html
@@ -15,7 +15,7 @@
             @case (true) {
               <div id="case-timeline">
                 @if (event.state_id !== 'Draft' && !isUserExternal) {
-                  <a (click)="caseHistoryClicked(event.id)"
+                  <a (click)="caseHistoryClicked(event.id.toString())"
                   class="text-16 event-link" attr.aria-label="{{getAriaLabelforLink(event, isUserExternal)}}">{{event.event_name | rpxTranslate}}</a>
                 }
                 @if ( event.state_id !== 'Draft' && isUserExternal) {
