--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/close-query/close-query.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/close-query/close-query.component.html
@@ -13,7 +13,7 @@
         <span class="govuk-visually-hidden">Warning</span>
         <p class="qm-service-message">
             <strong>
-            {{ 'Closing the query means the parties can no longer send message in this thread.' | rpxTranslate }}
+            {{ 'Closing this query means the parties can no longer send messages in this thread.' | rpxTranslate }}
             </strong>
         </p>
         </strong>
