--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
@@ -33,7 +33,7 @@
       <span aria-hidden="true" class="govuk-warning-text__icon">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-visually-hidden">Warning</span>
-        <p class="qm-service-message govuk-!-font-weight-bold">{{ 'This query has been closed by court staff.' | rpxTranslate }}</p>
+        <p class="qm-service-message govuk-!-font-weight-bold">{{ 'This query has been closed by HMCTS staff.' | rpxTranslate }}</p>
       </strong>
     </div>
   </ng-container>
